Trying to solve 100vh on mobile devices problem [8]

--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,13 @@ main {
   display: flex;
   flex-direction: column;
   gap: 5px;
-  min-height: calc(var(--vh, 1vh) * 100);
-  height: -webkit-fill-available;
-  width: 100vw;
+  
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
 }
 
 #header,
